<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slash_scree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#F0F4F3">
    <ImageView
        android:id="@+id/shape_1"
        android:layout_width="284dp"
        android:layout_height="255dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-84dp"
        android:layout_marginTop="-48dp"
        android:src="@drawable/shape" />

    <TextView
        android:id="@+id/txt_wel"
        android:layout_width="140dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="233dp"
        android:text="@string/welcome_onboard"
        android:textColor="#D9000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_task"
        android:layout_width="290dp"
        android:layout_height="56.2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="284dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="10sp"
        android:text="@string/let_s_help_you_meet_up_your_tasks"
        android:textColor="#B3000000"
        android:textSize="14.5sp"
        android:translationY="-5.06sp" />

    <EditText
        android:id="@+id/et_etrname"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_below="@+id/txt_task"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-9dp"
        android:background="@drawable/et_backgrd"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_name"

        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_below="@+id/et_etrname"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/et_backgrd"
        android:fontFamily="sans-serif-light"

        />
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_below="@id/et_email"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/et_backgrd"
        android:fontFamily="sans-serif-light"

        />
    <EditText
        android:id="@+id/cn_pass"
        android:layout_width="309dp"
        android:layout_height="38dp"
        android:layout_below="@id/et_pass"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/et_backgrd"
        android:fontFamily="sans-serif-light"

        />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/cn_pass"
        android:layout_marginTop="25dp"
        android:backgroundTint="#13C1CC"
        android:text="Register"
        app:cornerRadius="0dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_reg"
        android:layout_centerHorizontal="true"
        >

    <TextView
        android:id="@+id/al_acc"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="19dp"
        android:text="@string/already_have_an_account"
        android:textColor="#B3000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/sign_in"
        android:textColor="#13C1CC"
        android:layout_toEndOf="@+id/al_acc"
        />

    </RelativeLayout>



</RelativeLayout>