<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slash_scree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#F0F4F3"
    >

    <ImageView
        android:id="@+id/shape_1"
        android:layout_width="284dp"
        android:layout_height="255dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-84dp"
        android:layout_marginTop="-48dp"
        android:src="@drawable/shape" />

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="315.57dp"
        android:layout_height="163.05dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="178dp"
        android:clipToOutline="true"
        android:src="@drawable/welcome"

        />

    <TextView
        android:id="@+id/txt_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="426dp"
        android:gravity="center_horizontal|top"
        android:text="@string/gets_things"
        android:textSize="16.74sp"
        android:textColor="#D9000000"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lorem_ipsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="471dp"
        android:gravity="center_horizontal|top"

        android:lineSpacingExtra="10sp"
        android:text="@string/lorem_ipsum"
        android:textColor="#B3000000"
        android:textSize="14.35sp"
        android:translationY="-5.06sp" />


    <Button
        android:id="@+id/btn_gs"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:backgroundTint="#13C1CC"
        android:text="@string/get_started"
        app:cornerRadius="0dp"
        android:layout_below="@+id/lorem_ipsum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />


</RelativeLayout>